<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.hotellist.HotelListFragment">

    <data>

        <variable
            name="viewModel"
            type="app.recrutamento.android.challengealpha.ui.hotellist.HotelListViewModel" />

        <import type="android.view.View" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/search_view"
            layout="@layout/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_min_dimen"
            android:layout_marginTop="@dimen/margin_min_dimen"
            android:layout_marginEnd="@dimen/margin_min_dimen" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/search_view" />

        <ProgressBar
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerInParent="true"
            android:visibility="@{viewModel.loading ?  View.VISIBLE : View.GONE}" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@{viewModel.message}"
            android:visibility="@{viewModel.loading ? View.GONE : View.VISIBLE }" />

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/floatingActionMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            app:menu_icon="@drawable/ic_star"
            android:windowSoftInputMode="adjustResize"
            android:layout_alignParentBottom="true"
            app:menu_colorNormal="@color/colorAccent"
            android:layout_margin="@dimen/margin_wide"
            app:menu_openDirection="up"
            app:menu_showShadow="true" >


            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/optStarFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_five"
                app:fab_label="5 estrelas"
                app:fab_size="mini"
                app:fab_colorNormal="@color/colorAccent"
                />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/optStarFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_four"
                app:fab_colorNormal="@color/colorAccent"
                app:fab_label="4 estrelas"
                app:fab_size="mini"
                />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/optStarThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_three"
                app:fab_label="3 estrelas"
                app:fab_size="mini"
                app:fab_colorNormal="@color/colorAccent"
                />

        </com.github.clans.fab.FloatingActionMenu>

    </RelativeLayout>

</layout>