<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:results="http://schemas.android.com/tools">

    <data>
        <import type="androidx.lifecycle.LiveData"/>

        <import type="java.util.List" />

        <import type="com.example.challenge_alpha.api.HurbResponse"/>

        <variable
            name="results"
            type="LiveData&lt;com.example.challenge_alpha.api.Result&lt;HurbResponse>>"/>
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?android:attr/actionBarSize"
    android:id="@+id/fragment_results">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        results:recyclerResults="@{results}"
        results:progressBar="@{indeterminateBar}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <ProgressBar
        android:id="@+id/indeterminateBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>